# estimathon

./: Makefile  README.md  pyproject.toml
src/: main.py  questions.py  teams.py
